--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ html {
     font-size: 16px;
     background-color: var(--background-color);
     color: var(--font-color);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
 :root {
