--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
 
 html {
     font-size: 16px;
-    background-color: var(--background-color);
+    background: rgb(254, 254, 254);
+    background: linear-gradient(318deg, rgba(254, 254, 254, 1) 30%, rgba(218, 233, 255, 1) 89%);
     color: var(--font-color);
     font-family: 'Courier New', Courier, monospace;
 }
