--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -33,7 +33,7 @@ header {
     font-weight: 600;
     width: 8rem;
     font-size: 1rem;
-    border-bottom: 2px solid white;
+    border-bottom: 2px solid transparent;
     height: 1.5rem;
     z-index: 2;
 }
@@ -42,4 +42,8 @@ header {
 .button-header:hover {
     cursor: pointer;
     border-bottom: 3px solid var(--light-blue);
+}
+
+.item1:hover, .item2:hover, .item3:hover {
+    border-bottom: 3px solid white;
 }
