--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,9 +138,25 @@
 #container-main-3 {
     display: flex;
     flex-direction: row;
+    margin-top: ;
 }
 
 #grid-main-3 {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
+@keyframes is-rotating {
+    to {
+        transform: rotate(1turn);
+    }
+}
+
+/* #loading {
+    width: 200px;
+    height: 200px;
+    border: 20px solid gray;
+    border-top: 20px solid blue;
+    border-radius: 50%;
+    animation: is-rotating 1s infinite;
+} */
