feat: adicionar fonte roboto e ajeitar a imagem

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,9 +62,9 @@
 
 #image-main-1-2 {
     border-bottom-left-radius: 35%;
-    width: 55rem;
+    width: 90%;
     position: relative;
-    left: 4rem;
+    left: 5.1rem;
 }
 
 #image-main-1-3 {
